Added new options for the prefix

--- a/Frontend/patient_register.html
+++ b/Frontend/patient_register.html
@@ -26,6 +26,7 @@
               <option>Mr.</option>
               <option>Ms.</option>
               <option>Mrs.</option>
+              <option>Miss</option>
               <option>Dr.</option>
             </select>
             <small class="field-error" id="errPrefix"></small>
