--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -31,6 +31,7 @@
               <option>Mr.</option>
               <option>Ms.</option>
               <option>Mrs.</option>
+              <option>Miss</option>
             </select>
           </div>
 
